RESOLVED FIXED113485
Hang when calling setCurrentTime on SVG with cyclic animation dependency chain
https://bugs.webkit.org/show_bug.cgi?id=113485
Summary Hang when calling setCurrentTime on SVG with cyclic animation dependency chain
David Vest
Reported 2013-03-28 00:57:50 PDT
Created attachment 195496 [details] Test Discovered when writing tests for <https://bugs.webkit.org/show_bug.cgi?id=93528>.
Attachments
Test (1.02 KB, text/html)
2013-03-28 00:57 PDT, David Vest
no flags
Patch (4.40 KB, patch)
2013-03-28 07:41 PDT, David Vest
no flags
Patch (4.68 KB, patch)
2013-03-28 10:36 PDT, David Vest
no flags
Patch (4.61 KB, patch)
2013-04-02 01:37 PDT, David Vest
no flags
David Vest
Comment 1 2013-03-28 07:41:00 PDT
David Vest
Comment 2 2013-03-28 10:36:23 PDT
David Vest
Comment 3 2013-04-02 01:37:55 PDT
Stephen Chenney
Comment 4 2013-04-02 07:31:57 PDT
Comment on attachment 196102 [details] Patch Good catch. R=me. Let me know ASAP if you need me to land this.
David Vest
Comment 5 2013-04-02 07:52:50 PDT
Comment on attachment 196102 [details] Patch I've now added "cq: ?" to the patch, as you instructed me in bug 93528. It would be great if you could help me land it. I realize now that I possibly should have done so at the same time as adding "r: ?"?
WebKit Review Bot
Comment 6 2013-04-02 08:16:59 PDT
Comment on attachment 196102 [details] Patch Clearing flags on attachment: 196102 Committed r147434: <http://trac.webkit.org/changeset/147434>
WebKit Review Bot
Comment 7 2013-04-02 08:17:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.